# Ruschm

./: .gitignore  Cargo.toml  README.md
.github/actions-rs/: grcov.yml
.github/workflows/: build.yml  coverage.yml  default.yml  pr.yml  publish.yml
examples/: begin.scm  closure.scm  fib-tail.scm  fib.scm  library.scm  macros.scm  sum-tail.scm  ycombinator.scm
examples/example/: bar.sld  foo.sld
lib/scheme/: base.sld  write.sld
src/: env.rs  environment.rs  error.rs  interpreter.rs  io.rs  lexer.rs  lib.rs  library_factory.rs  main.rs  parser.rs  repl.rs  values.rs
src/interpreter/: error.rs  interpreter.rs  mod.rs  pair.rs
src/interpreter/scheme/: base.rs  base.scm
src/parser/: datum.rs  error.rs  grammar.sld  lexer.rs  macros.rs  mod.rs  pair.rs  parser.rs
tests/: builtin_functions.rs  macros.rs  pairs-lists.rs  pairs.scm  tco.rs
tests/tco_testcases/: fib-tail.scm  list.scm
tests/test_macros/: macro_list.scm
