[package]
name = "ruschm"
version = "0.1.2-alpha.3"
authors = ["Danielhu <yimingdz@gmail.com>", "hrl <cxghrl@gmail.com>", "Milo Yip <miloyip@gmail.com>", "xu0o0 <hqcat6@gmail.com>"]
edition = "2018"
repository = "https://github.com/Danielhu229/RustScheme"
description = "Scheme(R7RS) interpretor/compiler rust implementation"
license = "MIT"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

exclude = [
    ".github/",
    ".vscode/",
    ".editorconfig",
    ".gitignore",
    ".cargo_vcs_info.json"
]

[lib]
crate-type = ["lib"]

[dependencies]
rustyline = "6.2.0"
